Fix h2 text align on ebook pages

--- a/www/css/core.css
+++ b/www/css/core.css
@@ -887,7 +887,7 @@ article.ebook h1{
 	text-align: center;
 }
 
-article.ebook h2{
+article.ebook hgroup h2{
 	text-align: center;
 }
 
